--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.data.mongodb.database=Test
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 
+spring.servlet.multipart.max-file-size=256MB
+spring.servlet.multipart.max-request-size=256MB
+spring.servlet.multipart.enabled=true
+
 # App config
 server.port=8102
 spring.application.name=BootMongo
